--- a/Sign In Template/Base.lproj/Main.storyboard
+++ b/Sign In Template/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
         <array key="Oswald-Heavy.ttf">
             <string>Oswald-Heavy</string>
         </array>
-        <array key="Oswald-Light.otf">
+        <array key="Oswald-Light.ttf">
             <string>Oswald-Light</string>
         </array>
         <array key="Oswald-Regular.ttf">
@@ -166,7 +166,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Pv-Cg-bxR">
-                                <rect key="frame" x="168" y="592" width="40" height="36"/>
+                                <rect key="frame" x="168.5" y="592" width="39" height="36"/>
                                 <fontDescription key="fontDescription" name="Oswald-Light" family="Oswald" pointSize="17"/>
                                 <state key="normal" title="Cancel">
                                     <color key="titleColor" red="0.17254901959999999" green="0.23529411759999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -205,6 +205,7 @@
                     <connections>
                         <outlet property="emailTextField" destination="etC-Jp-gCy" id="wmJ-zb-X9L"/>
                         <outlet property="passwordTextField" destination="F8z-K2-esI" id="MLu-va-IxX"/>
+                        <segue destination="K7w-lr-wtG" kind="show" identifier="ProtectedContentVC" id="Ddu-n1-x5j"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iCx-zf-ccz" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -257,7 +258,7 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ess-AB-ZlZ">
-                                <rect key="frame" x="130.5" y="448" width="114" height="36"/>
+                                <rect key="frame" x="130" y="448" width="115" height="36"/>
                                 <fontDescription key="fontDescription" name="Oswald-Light" family="Oswald" pointSize="17"/>
                                 <state key="normal" title="Create new account">
                                     <color key="titleColor" red="0.17254901959999999" green="0.23529411759999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -287,6 +288,7 @@
                     <connections>
                         <outlet property="emailTextField" destination="JK5-P1-2wZ" id="rWT-C8-Euo"/>
                         <outlet property="passwordTextField" destination="2C1-6m-uRw" id="Atl-eF-xlJ"/>
+                        <segue destination="K7w-lr-wtG" kind="show" identifier="ProtectedContentVC" id="9XQ-jU-ftO"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="P77-vH-6lO" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -296,7 +298,7 @@
         <!--Title-->
         <scene sceneID="HUy-ec-fic">
             <objects>
-                <viewController id="K7w-lr-wtG" sceneMemberID="viewController">
+                <viewController id="K7w-lr-wtG" customClass="ProtectedContentVC" customModule="Sign_In_Template" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="e66-qe-QIH"/>
                         <viewControllerLayoutGuide type="bottom" id="3Gl-zn-NyP"/>
@@ -317,7 +319,12 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
                                     <navigationItem title="Protected Content" id="ir6-Ql-6ce">
-                                        <barButtonItem key="leftBarButtonItem" title="Logout" id="gxh-dv-WQG"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Logout" id="gxh-dv-WQG">
+                                            <color key="tintColor" red="0.17254901959999999" green="0.23529411759999999" blue="0.25882352939999997" alpha="1" colorSpace="calibratedRGB"/>
+                                            <connections>
+                                                <action selector="logout:" destination="K7w-lr-wtG" id="Veh-If-J7s"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -332,7 +339,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3q1-ff-1S3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1517.5999999999999" y="120.98950524737631"/>
+            <point key="canvasLocation" x="1505" y="121"/>
         </scene>
     </scenes>
     <resources>
@@ -343,5 +350,6 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="mbh-HQ-xkH"/>
+        <segue reference="9XQ-jU-ftO"/>
     </inferredMetricsTieBreakers>
 </document>
